backend api test done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,12 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <div class="inner_body">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
 
-    This is a darn good app
+    <a class="butt" href="http://househarbour.tk">Go to Househarbour website</a>
+    </div>
   </body>
 </html>
