--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,28 @@
 body {
-  padding: 50px;
+  background-color: lightgrey;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.inner_body{
+  position:fixed;
+  left:50%;
+  top:50%;
+
+  background-color: whitesmoke;
+  padding:20px;
+
+}
+
+.butt{
+  text-decoration: none;
+  background-color: green;
+  color:white;
+  width:250px;
+  height: 50px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+}
+
+.butt-flat{
+
 }
